@@ -27,6 +27,7 @@ export(ancPropStateMat)
 export(binTimeData)
 export(bin_cal3TimePaleoPhy)
 export(bin_timePaleoPhy)
+export(bindPaleoTip)
 export(branchClasses)
 export(cal3TimePaleoPhy)
 export(cladogeneticTraitCont)
@@ -105,13 +106,21 @@ export(timeSliceTree)
 export(trueTermTaxaTree)
 export(unitLengthTree)
 import(ape)
+import(stats)
+importFrom(grDevices,rainbow)
+importFrom(graphics,axis)
+importFrom(graphics,hist)
+importFrom(graphics,layout)
+importFrom(graphics,legend)
+importFrom(graphics,lines)
+importFrom(graphics,par)
+importFrom(graphics,plot)
+importFrom(graphics,polygon)
+importFrom(graphics,title)
+importFrom(methods,is)
 importFrom(phangorn,Ancestors)
 importFrom(phangorn,Descendants)
 importFrom(phangorn,ancestral.pars)
 importFrom(phangorn,phyDat)
-import(stats)
-importFrom("graphics", "par", "layout", "plot", "hist", "lines", "legend", "polygon", "title")
-importFrom("grDevices", "rainbow")
-importFrom("methods", "is")
-importFrom("utils", "read.csv")
-importFrom("phytools", "bind.tip")
+importFrom(phytools,bind.tip)
+importFrom(utils,read.csv)
