@@ -80,8 +80,15 @@
 
 # NAMESPACE IMPORTING
 
-#' @importFrom phangorn Descendants Ancestors phyDat ancestral.pars
 #' @import ape
+#' @import stats
+
+#' @importFrom phangorn Descendants Ancestors phyDat ancestral.pars
+#' @importFrom phytools bind.tip
+#' @importFrom graphics par layout plot hist lines legend polygon title axis
+#' @importFrom grDevices rainbow
+#' @importFrom methods is
+#' @importFrom utils read.csv
 
 
 NULL
