@@ -2,13 +2,14 @@
 % Please edit documentation in R/modifyTerminalBranches.R
 \name{modifyTerminalBranches}
 \alias{addTermBranchLength}
+\alias{bindPaleoTip}
 \alias{dropExtant}
 \alias{dropExtinct}
 \alias{dropPaleoTip}
 \alias{dropZLB}
 \alias{fixRootTime}
 \alias{modifyTerminalBranches}
-\title{Modify or Drop Terminal Branches of Various Types}
+\title{Modify, Drop or Bind Terminal Branches of Various Types (Mainly for Paleontological Phylogenies)}
 \usage{
 dropZLB(tree)
 
@@ -22,10 +23,15 @@ fixRootTime(treeOrig, treeNew, consistentDepth = TRUE,
   nodeAgeTransfer = TRUE)
 
 dropPaleoTip(tree, ...)
+
+bindPaleoTip(tree, tipLabel, nodeAttach = NULL, tipAge = NULL,
+  edgeLength = NULL, positionBelow = 0, noNegativeEdgeLength = TRUE)
 }
 \arguments{
 \item{tree}{A phylogeny as a phylo object. dropPaleoTip requires this
-input object to also have a $root.time element.}
+input object to also have a $root.time element. If not provided for
+bindPaleoTip, then the root.time will be presumed to be such that the
+furthest tip from the root is at time=0.}
 
 \item{tol}{Tolerance for determining modern age; used for distinguishing
 extinct from extant taxa. Tips which end within 'tol' of the furthest
@@ -57,6 +63,26 @@ the first matching taxon in both trees. The later is how fixRootTime functioned 
 prior to paleotree v2.3.}
 
 \item{...}{additional arguments passed to dropPaleoTip are passed to drop.tip}
+
+\item{tipLabel}{A character string of \code{length = 1} containing the name of the new tip
+to be added to \code{tree}.}
+
+\item{nodeAttach}{Node or tip ID number (as given in tree$edge) at which to attach the new tip.
+See documentation of \code{bind.tip} for more details.}
+
+\item{tipAge}{The age of the tip taxon added to the tree, in time before present (i.e. where
+present is 0), given in the same units as the edges of the tree are already scaled. Cannot be
+given if \code{newLength} is given.}
+
+\item{positionBelow}{The distance along the edge below the node to be attached to
+(given in code{nodeAttach} to add the new tip. Cannot be negative or greater than the length of the
+edge below \code{nodeAttach}.}
+
+\item{noNegativeEdgeLength}{Return an error if a negative terminal edge length is calculated
+for the new tip.}
+
+\item{newLength}{The new \code{edge.length} of the terminal branch this tip is connected to.
+Cannot be given if \code{tipAge} is given.}
 }
 \value{
 Gives back a modified phylogeny as a phylo object, generally with a
@@ -65,8 +91,6 @@ modified $root.time element.
 \description{
 These functions modify terminal branches or drop certain terminal branches
 based on various criteria.
-}
-\details{
 DropZLB drops tip-taxa that are attached to the tree via zero-length
 terminal branches ("ZLBs"). This is sometimes useful for paleo-trees, as
 various time-scaling methods often produce these ZLBs, taxa whose early
@@ -76,7 +100,8 @@ diversification/diversity, as these will appear as simultaneous
 speciation/extinction events. Note this function only drops tips attached to
 a terminal zero-length branch; if you want to collapse internal zero-length
 branches, see the ape function \code{\link{di2multi}}.
-
+}
+\details{
 DropExtinct drops all terminal branches which end before the modern (i.e.
 extinct taxa). DropExtant drops all terminal branches which end at the
 modern (i.e. extant/still-living taxa). In both cases, the modern is defined
@@ -103,7 +128,17 @@ utility function called by a majority of the other functions discussed
 in this help file.
 
 dropPaleoTip is a wrapper for ape's \code{drop.tip} which also modifies the
-$root.time element if necessary, using fixRootTime.
+$root.time element if necessary, using \code{fixRootTime}. Similarly,
+bindPaleoTip is a wrapper for phytool's \code{bind.tip} which allows tip age
+as input and modifies the $root.time element if necessary (i.e. if a tip
+is added to edge leading up to the root).
+
+Note that for bindPaleoTip, tips added below the root are subtracted from
+any existing $root.edge element, as per behavior of bind.tip and bind.tree.
+However, bindPaleoTip will append a $root.edge of the appropriate length
+if one does not exist (or is not long enough) to avoid an error. After
+binding is finished, any $root.edge equal to 0 is removed before the
+resulting tree is output.
 }
 \examples{
 set.seed(444)
@@ -137,8 +172,11 @@ treeA <- rtree(10)
 treeB <- addTermBranchLength(treeA,1)
 compareTermBranches(treeA,treeB)
 
+#########################
 #test dropPaleoTip
 	#(and fixRootTime by extension...)
+
+#simple example
 tree<-read.tree(text="(A:3,(B:2,(C:5,D:3):2):3);")
 tree$root.time<-10
 plot(tree,no.margin=FALSE)
@@ -155,12 +193,96 @@ axisPhylo()
 (test[8]<-dropPaleoTip(tree,c("A","D"))$root.time) # =7
 #
 if(!identical(test,c(7,10,10,10,5,10,7,7))){stop("fixRootTime fails!")}
+
+
+##############
+#testing bindPaleoTip
+
+# simple example
+tree<-read.tree(text="(A:3,(B:2,(C:5,D:3):2):3);")
+tree$root.time<-20
+plot(tree,no.margin=FALSE)
+axisPhylo()
+
+\dontrun{
+
+require(phytools)
+
+#bindPaleoTip effectively wraps bind.tip from phytools
+# using a conversion like below
+
+tipAge<-5
+node<-6
+
+#new length = the root time - tipAge - nodeheight(tree,node)
+
+newLength<-tree$root.time-tipAge-nodeheight(tree,node)
+tree1<-bind.tip(tree,"tip.label",where=node,edge.length=newLength)
+
+layout(1:2)
+plot(tree);axisPhylo()
+plot(tree1);axisPhylo()
+
+}
+
+# now with bindPaleoTip
+
+
+tree1<-bindPaleoTip(tree,"new",nodeAttach=6,tipAge=5)
+
+layout(1:2)
+plot(tree);axisPhylo()
+plot(tree1);axisPhylo()
+layout(1)
+
+#then the tip age of "new" should 5
+test<-dateNodes(tree1)[which(tree1$tip.label=="new")]==5
+if(!test){stop("bindPaleoTip fails!")}
+
+# with positionBelow
+
+tree1<-bindPaleoTip(tree,"new",nodeAttach=6,tipAge=5,positionBelow=1)
+
+layout(1:2)
+plot(tree);axisPhylo()
+plot(tree1);axisPhylo()
+layout(1)
+
+# at the root
+
+tree1<-bindPaleoTip(tree,"new",nodeAttach=5,tipAge=5)
+
+layout(1:2)
+plot(tree);axisPhylo()
+plot(tree1);axisPhylo()
+layout(1)
+
+#then the tip age of "new" should 5
+test<-dateNodes(tree1)[which(tree1$tip.label=="new")]==5
+if(!test){stop("bindPaleoTip fails!")}
+
+# at the root with positionBelow
+
+tree1<-bindPaleoTip(tree,"new",nodeAttach=5,tipAge=5,
+	positionBelow=3)
+
+layout(1:2)
+plot(tree);axisPhylo()
+plot(tree1);axisPhylo()
+layout(1)
+
+#then the tip age of "new" should 5
+test<-dateNodes(tree1)[which(tree1$tip.label=="new")]==5
+#and the root age should be 23
+test1<-tree1$root.time==23
+if(!test | !test1){stop("bindPaleoTip fails!")}
 }
 \author{
-David W. Bapst
+David W. Bapst. The functions dropTipPaleo and bindTipPaleo are modified imports of
+\code{drop.tip} and \code{bind.tip} from packages \code{ape} and \code{phytools}.
 }
 \seealso{
-\code{\link{phyloDiv}}, \code{\link{drop.tip}},
-\code{\link{compareTermBranches}}
+\code{\link{compareTermBranches}}, \code{\link{phyloDiv}},
+\code{\link{drop.tip}}, \code{\link{bind.tip}}
 }
 
