@@ -18,6 +18,8 @@ Version - 2.5 -
 -Added example dataset of character matrix and cladogram from Song and Zhang (2014) study of dicranograptid relationships
 -Removed variables from functions that were assigned but never used via package codetools
 -Following recent change in CRAN policy, now explicitly importing various functions from default non-base package into paleotree namespace, including importing package stats as a whole. These imports now listed in DESCRIPTION.
+-Added function bindPaleoTip which wraps phytool's bind.tip for use with non-ultrametric paleontological phylogenies with $root.time elements, allows input of the new tips age and updates $root.time
+-Added 'kanto' a fictional example dataset, consisting of a taxon abundances-by-sites table for community ecology
 -
 
 Version - 2.4 - 05-01-15
